--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "express-mysql-session": "^2.1.4",
-    "morgan": "~1.9.1",
+    "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "express-session": "^1.17.1"
+    "nodemon": "^2.0.3"
   }
 }
